added new links

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style/style.css" />
 </head>
 
 <body>
   <div class="container">
     <h3>Index</h3>
     <ul>
-      <li><a href="">Data Structures & Algorithms</a></li>
+      <li><a href="html/ds_algo.html">Data Structures & Algorithms</a></li>
       <li><a href="">Core Java</a></li>
-      <li><a href="java_web_dev.html">Java Web Development</a></li>
+      <li><a href="html/java_web_dev.html">Java Web Development</a></li>
       <li><a href="">Design Patterns</a></li>
       <li><a href="">Java Persistence</a></li>
       <li><a href="">Spring</a></li>
