--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>Index</title>
   <link rel="stylesheet" href="style/style.css" />
 </head>
 
@@ -9,13 +10,14 @@
     <h3>Index</h3>
     <ul>
       <li><a href="html/ds_algo.html">Data Structures & Algorithms</a></li>
-      <li><a href="">Core Java</a></li>
+      <li><a href="html/core_java.html">Core Java</a></li>
       <li><a href="html/java_web_dev.html">Java Web Development</a></li>
       <li><a href="">Design Patterns</a></li>
       <li><a href="">Java Persistence</a></li>
       <li><a href="">Spring</a></li>
       <li><a href="">Big Data</a></li>
-      <li><a href="">Networking</a></li>
+      <li><a href="html/os_networking.html">OS & Networking</a></li>
+      <li><a href="html/dev_tools.html">Development Tools</a></li>
       <li><a href="">English</a></li>
       <li><a href="">Maths & Reasoning</a></li>
     </ul>
