--- a/html/java_web_dev.html
+++ b/html/java_web_dev.html
@@ -33,16 +33,18 @@
     <h3>Web Application Security</h3>
     <div>
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="https://www.youtube.com/watch?v=LRMBZhdFjDI"><img src="../images/yt.ico" class="yt"/>&nbsp;What are certificates?</a></li>
+        <li><a href="https://www.youtube.com/watch?v=qXLD2UHq2vk"><img src="../images/yt.ico" class="yt"/>&nbsp;Intro to Digital Certificates</a></li>
+        <li><a href="https://www.youtube.com/watch?v=CPbvxxslDTU"><img src="../images/yt.ico" class="yt"/>&nbsp;OAuth 2.0: An Overview</a></li>
       </ul>
     </div>
   </div>
 
   <script>
-    $("#accordion").accordion();
+    $("#accordion").accordion({
+      collapsible: true,
+      active: false
+    });
   </script>
 
 </body>
