--- a/html/ds_algo.html
+++ b/html/ds_algo.html
@@ -12,9 +12,10 @@
   <div id="accordion">
     <h3>Sorting Algorithms</h3>
     <div>
-      <div style="margin-left:10px; margin-bottom:10px">
-        <a href="https://www.geeksforgeeks.org/sorting-algorithms/">GeeksForGeeks</a>
-      </div>
+      <ul style="margin-bottom:15px">
+        <li><a href="https://www.geeksforgeeks.org/sorting-algorithms/"><img src="../images/gfg.png" class="gfg"/>&nbsp;GeeksForGeeks</a></li>
+        <li><a href="https://www.youtube.com/playlist?list=PL2_aWCzGMAwKedT2KfDMB9YA5DgASZb3U"><img src="../images/yt.ico" class="yt"/>&nbsp;mycodeschool</a></li>
+      </ul>
       <table>
         <thead>
           <tr>
@@ -24,23 +25,34 @@
         </thead>
         <tbody>
           <tr>
-            <td>
-              <ol>
-                <li>Selection Sort</li>
-                <li>Bubble Sort</li>
-                <li>Insertion Sort</li>
-                <li>Merge Sort</li>
-                <li>Quick Sort</li>
-              </ol>
-            </td>
-            <td><a href="https://www.youtube.com/playlist?list=PL2_aWCzGMAwKedT2KfDMB9YA5DgASZb3U"><img src="../images/yt.ico">&nbsp;mycodeschool</a></td>
+            <td>Selection Sort</td>
+            <td></td>
           </tr>
           <tr>
-            <td style="padding-left:5px">6. Heap Sort</td>
+            <td>Bubble Sort</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Insertion Sort</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Merge Sort</td>
+            <td><a href="https://www.geeksforgeeks.org/merge-sort/"><img src="../images/gfg.png" class="gfg"/>&nbsp;Merge Sort</a></td>
+          </tr>
+          <tr>
+            <td>Quick Sort</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Heap Sort</td>
             <td></td>
           </tr>
         </tbody>
       </table>
+      <ul style="margin-bottom:15px">
+        <li><a href="https://www.geeksforgeeks.org/quick-sort-vs-merge-sort/"><img src="../images/gfg.png" class="gfg"/>&nbsp;Quick Sort vs Merge Sort</a></li>
+      </ul>
     </div>
 
     <h3>Heading 3</h3>
@@ -55,7 +67,10 @@
   </div>
 
   <script>
-    $("#accordion").accordion();
+    $("#accordion").accordion({
+      collapsible: true,
+      active: false
+    });
   </script>
 
 </body>
