--- a/html/ds_algo.html
+++ b/html/ds_algo.html
@@ -10,6 +10,16 @@
 
 <body>
   <div id="accordion">
+    <h3>Data Structures</h3>
+    <div>
+      <ul>
+        <li><a href="">List Item 1</a></li>
+        <li><a href="">List Item 2</a></li>
+        <li><a href="">List Item 3</a></li>
+        <li><a href="">List Item 4</a></li>
+      </ul>
+    </div>
+
     <h3>Sorting Algorithms</h3>
     <div>
       <ul style="margin-bottom:15px">
@@ -54,8 +64,7 @@
         <li><a href="https://www.geeksforgeeks.org/quick-sort-vs-merge-sort/"><img src="../images/gfg.png" class="gfg"/>&nbsp;Quick Sort vs Merge Sort</a></li>
       </ul>
     </div>
-
-    <h3>Heading 3</h3>
+    <h3>Practice Problems</h3>
     <div>
       <ul>
         <li><a href="">List Item 1</a></li>
@@ -64,8 +73,8 @@
         <li><a href="">List Item 4</a></li>
       </ul>
     </div>
-  </div>
 
+  </div>
   <script>
     $("#accordion").accordion({
       collapsible: true,
